# cs283-jackal-particle-filter

./: Report.md  gazebo.launch  readme.md  robot.launch  rviz.launch  start.launch  test.launch
src/apriltag_cfg/config/: settings.yaml  tags.yaml
src/apriltag_cfg/launch/: fetch_continuous_detection.launch
src/homework/: CMakeLists.txt  package.xml
src/homework/src/: hw4.cpp  note.txt  tags_pose_map.txt
src/jackal/jackal_control/: package.xml
src/jackal/jackal_control/launch/: teleop.launch
src/jackal/jackal_description/urdf/: hw4.urdf.xacro  jackal.gazebo
src/jackal/jackal_navigation/launch/include/: gmapping.launch
src/jackal_simulator/jackal_gazebo/: hw4.rviz
src/jackal_simulator/jackal_gazebo/launch/: jackal_world.launch
src/jackal_simulator/jackal_gazebo/worlds/: hw4.world
src/preprocessing/: preprocessing.py
