<?xml version="1.0"?>
<package format="2">
    <name>hw4</name>
    <version>1.4.1</version>
    <description>Homework 4.</description>

    <maintainer email="cuijd@shanghaitech.edu.cn">JD</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/perception_pcl</url>
    <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>
    <url type="repository">https://github.com/ros-perception/perception_pcl</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>laser_geometry</depend>
    <depend>message_filters</depend>
    <depend>nodelet</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>

    <test_depend>roslint</test_depend>

</package>
